# precommit-test

./: .gitignore  .pre-commit-hooks.yaml  main.py  requirements-dev.txt  setup.cfg
pre_commit_hook/: __init__.py  autogrades.py  cell_check.py  check_notebook.py  check_points.py  factory.py  grader_base.py  notebook_parser.py  parser_base.py  python_parser.py  utils.py
resources/test/: CustomerSegmentation_Instructor.ipynb  CustomerSegmentation_Student.ipynb
